# pms_demo_backend

./: .drone.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_alter_plan_member.py  0002_member_card_number_alter_member_address.py  0002_rename_name_member_username_member_card_number_and_more.py  0003_alter_plan_plan_type.py  0003_member_points.py  0004_alter_member_card_number_alter_member_phone_and_more.py  0004_alter_plan_is_activate.py  0005_alter_plan_plan_end_alter_plan_plan_start.py
edit/: urls.py  views.py
pms_demo_backend/: asgi.py  settings.py  urls.py  wsgi.py
search/: views.py
